Fix images overflowing

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -59,6 +59,7 @@ html {
 .docs-index-header > img {
 	height: 100%;
 	max-height: 20vw;
+	margin: unset;
 }
 
 .docs-index-header > h1 {
