--- a/src/css/_markdown.scss
+++ b/src/css/_markdown.scss
@@ -112,7 +112,7 @@ p {
 a {
 	color: var(--link);
 }
-article > p > img {
+article img {
 	margin: auto;
 	margin: 1em auto;
 	display: block;
